@startuml

title US025

/'
As Product Owner, I want the system to have a type of sensor that gives the
power consumption in a given instant (W).
'/

interface Sensor {
    + getId() : int
    + generateId(int) : int
    + getType() : SensorType
    + getValue() : Value
}

class SensorOfElectricEnergyConsumption {
    - id : int
    - type : SensorType
    - value : Value
    + SensorOfElectricEnergyConsumption()
    + getId() : int
    + generateId(int) : int
    + getType() : SensorType
    + getValue() : Value
}

interface Value {
    + valueToString() : String
}

class ElectricEnergyConsumptionValue {
    - electricEnergyConsumptionValue : double
    + ElectricEnergyConsumptionValue(double)
    + valueToString() : String
}

enum SensorType {
    - type : SensorType
    + SensorType(...)
    + getSensorType() : String
}

SensorOfElectricEnergyConsumption ..|> Sensor : " implements       "
ElectricEnergyConsumptionValue ..|> Value : " implements"
SensorOfElectricEnergyConsumption "1  " *-- "1    " ElectricEnergyConsumptionValue :  "  has"
SensorOfElectricEnergyConsumption "1  " o-- "1  " SensorType :  "  has"


@enduml